Fixed sidebar content and solr bar alignements

--- a/sass/navigation.scss
+++ b/sass/navigation.scss
@@ -134,8 +134,8 @@ li a.active {
   *
   */
 .sidebar {
-  box-shadow: 0 0 5px 1px rgba(38, 37, 38, 0.3);
-  padding: 2em 1.5em;
+  //box-shadow: 0 0 3px 1px rgba(38, 37, 38, 0.3);
+  padding: 0 1.1em;
 }
 
 /*
